<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/viewHairView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:gravity="center"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/hairView"
        app:layout_constraintStart_toStartOf="@id/hairView" />

    <TextView
        android:id="@+id/viewEyesView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:gravity="center"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/eyesView"
        app:layout_constraintStart_toStartOf="@id/eyesView"/>

    <TextView
        android:id="@+id/viewSkinView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:gravity="center"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/skinView"
        app:layout_constraintStart_toStartOf="@id/skinView" />

    <TextView
        android:id="@+id/hairView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:gravity="center"
        android:text="@string/character_hair"
        app:layout_constraintEnd_toStartOf="@id/eyesView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewHairView" />

    <TextView
        android:id="@+id/eyesView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:gravity="center"
        android:text="@string/character_eyes"
        app:layout_constraintEnd_toStartOf="@id/skinView"
        app:layout_constraintStart_toEndOf="@id/hairView"
        app:layout_constraintTop_toBottomOf="@id/viewEyesView" />

    <TextView
        android:id="@+id/skinView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:gravity="center"
        android:text="@string/character_skin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/eyesView"
        app:layout_constraintTop_toBottomOf="@id/viewSkinView" />
</android.support.constraint.ConstraintLayout>